# CChallenge

./: .dockerignore  .env.example  .gitignore  Dockerfile.agent  Dockerfile.agent.dockerignore  README.md  agent-requirements.txt  base_tofix.md  disambiguation_tofix.md  hallucinations_tofix.md  helpers.md  helperstofix.md  multitools.md  pyproject.toml  test_analysis.md  test_analysis_coroutine_train.md  test_analysis_train.md  testevaflaky.md  testsignals.md  variants.md
docs/: a2a-integer-coercion-issue.md  agent-under-test-harnessing.md  cerebras-harness-patterns.md  coroutine-agent-architecture.md  development-discipline.md  development-guide.md  evaluator-agent-contract.md  facts-vs-intention-refactor-review.md  policy-clarification-base-86-88.md  policy.md  route-selection-matrix.md  submission-prep.md
run_configs/: coroutine_ac_helper_regression_cerebras_gemini_1.toml  coroutine_active_route_charging_regression_cerebras_gemini_1.toml  coroutine_all_helper_affected_cerebras_gemini_1.toml  coroutine_base56_cerebras_gemini_3.toml  coroutine_base70_cerebras_gemini_1.toml  coroutine_base74_cerebras_gemini_1.toml  coroutine_base74_cerebras_gemini_3.toml  coroutine_base76_cerebras_gemini_3.toml  coroutine_base84_cerebras_gemini_1.toml  coroutine_base86_cerebras_gemini_3.toml  coroutine_base88_cerebras_gemini_1.toml  coroutine_base88_cerebras_gemini_3.toml  coroutine_base98_cerebras_gemini_1.toml  coroutine_base_82_route_boundary_gemini_3trial.toml  coroutine_base_cerebras_calendar_poi_ev_gemini_1.toml  coroutine_base_cerebras_contact_routechain_gemini_1.toml  (+137 more)
(+63 files in other folders)
